--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -49,4 +49,7 @@
     <color name="dark_secondary_variant_color">#000000</color>
     <color name="loading_page_icon_bg_color">#FDFCFC</color>
 
+    <color name="blue">#2196F3</color>
+
+
 </resources>
