--- a/app/src/main/res/layout/activity_homepage4caretaker.xml
+++ b/app/src/main/res/layout/activity_homepage4caretaker.xml
@@ -189,6 +189,44 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
 
+    <!-- Chatbot Animation -->
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/chatBotAnimation"
+        android:layout_width="82dp"
+        android:layout_height="110dp"
+        android:layout_marginEnd="10dp"
+        android:elevation="4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/chatbot"
+        android:clickable="true"
+        android:focusable="true"/>
+
+
+    <!-- Chatbot Greeting -->
+
+    <TextView
+        android:id="@+id/chatBotGreeting"
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="-43dp"
+        android:textAlignment="center"
+        android:background="@drawable/speech_bubble"
+        android:elevation="20dp"
+        android:fontFamily="@font/poppins_bold"
+        android:padding="10dp"
+        android:text="Hi!!"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:clickable="true"
+        android:focusable="true"
+        app:layout_constraintBottom_toTopOf="@id/chatBotAnimation"
+        app:layout_constraintEnd_toEndOf="@id/chatBotAnimation"
+        app:layout_constraintHorizontal_bias="0.794"
+        app:layout_constraintStart_toStartOf="@id/chatBotAnimation" />
+
     <androidx.cardview.widget.CardView
             android:id="@+id/medicalDiaganosticsHeaderCardView"
             android:layout_width="0dp"
@@ -234,6 +272,8 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
