--- a/app/src/main/res/layout/activity_tasks_list.xml
+++ b/app/src/main/res/layout/activity_tasks_list.xml
@@ -68,109 +68,113 @@
 
     <SearchView
         android:id="@+id/task_list_searchView"
-        android:layout_width="375dp"
+        android:layout_width="0dp"
         android:layout_height="64dp"
         android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginTop="5dp"
         android:background="@drawable/white_rectangle_patient_list"
         android:iconifiedByDefault="false"
         android:queryHint="@string/search"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/task_list_title" />
 
 
+
     <androidx.cardview.widget.CardView
-            android:id="@+id/task_list_task_overview"
-            android:layout_width="375dp"
-            android:layout_height="64dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            app:cardCornerRadius="30dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/task_list_searchView">
+        android:id="@+id/demo_task_card"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="4dp"
+        app:layout_constraintTop_toBottomOf="@+id/task_list_searchView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-        <Button
-            android:id="@+id/add_task_button"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:alpha="0"
-            android:backgroundTint="@color/_bg__new_homepage___ek2_color"
-            android:text="" />
+            android:layout_height="wrap_content"
+            android:padding="16dp">
 
-        <LinearLayout
-                android:id="@+id/task_list_overview_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:padding="15dp">
-
-            <ImageView
-                    android:id="@+id/imageView55"
-                    android:layout_width="35dp"
-                    android:layout_height="33dp"
-                    android:contentDescription="TODO"
-                    app:srcCompat="@drawable/red_circle" />
-
+            <!-- Title (Always visible) -->
             <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/task_title"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="6dp"
-                android:fontFamily="sans-serif-black"
-                android:text="@string/add_task"
-                android:textColor="@color/black"
-                android:textSize="15sp" />
+                android:text="Demo Task Title"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:textColor="@android:color/black"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/expand_icon"
+                app:layout_constraintBottom_toBottomOf="@id/expand_icon" />
 
+            <!-- Expand/Collapse Button -->
             <ImageView
-                android:id="@+id/imageView64"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_marginLeft="190dp"
-                android:contentDescription="TODO"
-                app:srcCompat="@drawable/add_image_button"
-                tools:layout_editor_absoluteX="337dp"
-                tools:layout_editor_absoluteY="234dp" />
+                android:id="@+id/expand_icon"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:contentDescription="Expand Task"
+                android:src="@drawable/ic_expand_more"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
-        </LinearLayout>
+            <!-- Description (Hidden by default) -->
+            <TextView
+                android:id="@+id/task_desc"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="This is a demo task description."
+                android:textSize="14sp"
+                android:visibility="gone"
+                app:layout_constraintTop_toBottomOf="@id/task_title"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="8dp" />
 
+            <!-- Assigned To (Hidden by default) -->
+            <TextView
+                android:id="@+id/task_assigned"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Assigned to: Aryan Sharma"
+                android:textSize="14sp"
+                android:visibility="gone"
+                app:layout_constraintTop_toBottomOf="@id/task_desc"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="8dp" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
-    <ScrollView
-            android:id="@+id/task_list_scrollView"
-            android:layout_width="409dp"
-            android:layout_height="338dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/task_list_task_overview">
 
-        <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/task_list_recycleView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-    </ScrollView>
-
-    <ImageView
-            android:id="@+id/imageView61"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_marginStart="188dp"
-            android:contentDescription="TODO"
-            app:layout_constraintBottom_toTopOf="@+id/imageView62"
-            app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@drawable/three_point" />
-
-    <ImageButton
-        android:id="@+id/imageView62"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="188dp"
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/add_task_material_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="13dp"
-        android:contentDescription="TODO"
+        android:text="Add Task"
+        android:textColor="@android:color/white"
+        android:backgroundTint="@color/TG_blue"
+        app:icon="@drawable/ic_add"
+        app:iconPadding="8dp"
+        app:cornerRadius="16dp"
+        app:iconGravity="textStart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/edit_button_plus"
-        android:background="?attr/selectableItemBackgroundBorderless" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5" />
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
     <include
